rename 'quick info' entries

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -547,15 +547,6 @@ dialog.unable_to_connect_to_member=Unable to connect to {0}
 dialog.unable_to_open_port=Unable to open on local port {0}, maybe PowerFolder is already running
 dialog.update.updating.text=Downloading update
 dialog.update.updating=Updating
-dialog.update_check.downloadAndUpdate=Download and update now
-dialog.update_check.downloadAndUpdateSilent=Download and silently update now
-dialog.update_check.failed.text=Update failed. Please check your Internet connection.\n \nPowerFolder Pro\: Please also check your Update-Service account under\nSettings/Pro Settings/PowerFolder Pro Loader.
-dialog.update_check.failed.title=Update failed
-dialog.update_check.gotoHomepage=Go to PowerFolder homepage
-dialog.update_check.noUpdateAvailable=This version is up to date
-dialog.update_check.nothingNeverAsk=Nothing and never ask again
-dialog.update_check.text=A newer version of PowerFolder is available            \n\nThis version\: v{0}\nLatest available\: v{1} (newer)\n
-dialog.update_check.title=Newer version available
 
 debug_information_card.title=Debug
 
@@ -631,16 +622,6 @@ files_table_model.size=Size
 files_table_model.modified_by=Modified by
 files_table_model.date=Date
 
-file_list.name=Name
-
-filename_problem.dialog.automatic_rename.explained=removes invalid characters and or adds "-1", or similair fixes to create a valid (unique) filename
-filename_problem.dialog.automatic_rename=Automatic rename
-filename_problem.dialog.description=Filename problem(s) detected, select a solution for each file
-filename_problem.dialog.exclude_from_sync.explained=Add this file to the list of files that are excluded from sharing
-filename_problem.dialog.exclude_from_sync=Exclude from sync
-filename_problem.dialog.solution=Solution
-filename_problem.dialog.sync_anyways=Try to sync anyways
-filename_problem.dialog.title=Filename problem(s) detected
 filename_problem.duplicate=Duplicate filename found (with different case)
 filename_problem.ends_with_illegal_char=The filename ends with characters that are not recommended
 filename_problem.ends_with_illegal_char.soln_desc=Rename the file
@@ -662,7 +643,6 @@ files_tab.combo.local_and_incoming=Local and incoming files
 files_tab.combo.local_files_only=Local files only
 files_tab.combo.new_files_only=New files only
 files_tab.combo.tool_tip=Select files to display
-files_tab.filter_by_file_name.hint=Filter by file name
 files_tab.flat_view.text=Flat view
 files_tab.flat_view.tip=Flatten view of folder directory structure
 
@@ -678,8 +658,6 @@ find_computers_dialog.title=Find computers
 find_computers_panel.search_for_computer.hint=Search for a computer
 find_computers_panel.search_for_computer.tooltip=Enter three or more characters to search for a computer
 
-folder.check_path_length.text=The combined length of the path to the file and the filename is more than 255 characters.\nThis is not recommended since this may not work on other Operating systems like Windows 2000.\n\nFolder\: {0}\nFile\: {1}
-folder.check_path_length.title=Path maybe to long
 folder.info_tip=Contains files and folders managed by PowerFolder
 
 folder_create.os_error.text=Unable to setup the Online Storage to backup folder {0}
@@ -786,7 +764,6 @@ general.days={0} days
 general.delete.key=D
 general.delete=Delete
 general.directory=Directory
-general.description=Description
 general.estimated_size=Estimated size
 general.file=File
 general.files=Files
@@ -905,7 +882,6 @@ skin.mauve_metallic=Mauve Metallic
 skin.orange_metallic=Orange Metallic
 skin.silver_moon=Silver Moon
 skin.sky_metallic=Sky Metallic
-skin.standard=Standard
 skin.white_vision=White Vision
 
 low_memory.configure_failure=PowerFolder was unable to configure additional memory.\nPlease contact PowerFolder Support for advice.
@@ -989,7 +965,6 @@ preferences.dialog.bind.tooltip=Select the address PowerFolder should use
 preferences.dialog.bind=Interface address
 preferences.dialog.bindDescr=Interface description
 preferences.dialog.create_desktop_shortcuts=Create desktop shortcuts
-preferences.dialog.delete_empty_dirs=Delete empty directories
 preferences.dialog.delta_sync.tooltip=Synchronize only changed file-parts
 preferences.dialog.delta_sync=Use delta sync on the Internet
 preferences.dialog.dialogs.ask_to_add_friend_message=Ask to add personal message for friend
@@ -1107,11 +1082,10 @@ preview_folder_remove.dialog.title=Remove PowerFolder {0}?
 
 public_folders.filter.show_empty_folders=Show empty folders
 
-quickinfo.my_folders.in_sync_all=All PowerFolders are synchronized
-quickinfo.my_folders.powerfolders={0} in {1} PowerFolder(s)
-quickinfo.my_folders.syncing=Synchronizing {0} PowerFolder(s)
-quickinfo.my_folders.title=Status of My PowerFolders
-quickinfo.webservice.folders_mirrored={0} of {1} folders get backed up. {2} online space used.
+check_status.in_sync_all=All PowerFolders are synchronized
+check_status.powerfolders={0} in {1} PowerFolder(s)
+check_status.syncing=Synchronizing {0} PowerFolder(s)
+check_status.title=Status of My PowerFolders
 
 restore.busy.description=Moving files from the PowerFolder recycle bin to your folder
 restore.busy.title=Restoring file
@@ -1150,7 +1124,6 @@ settings_tab.confirm_local_folder_move.text=Local folder will be moved from\n{0}
 settings_tab.confirm_local_folder_move.title=Confirm move
 settings_tab.edit_a_pattern.text=Edit a pattern to exclude files from synchronization
 settings_tab.edit_a_pattern.title=Edit a pattern
-settings_tab.folder_preview=Folder preview
 settings_tab.folder_not_empty.title=Folder not empty
 settings_tab.folder_not_empty=Folder {0} is not empty.
 settings_tab.ignore_patterns=Ignore patterns
@@ -1162,7 +1135,6 @@ settings_tab.move_content=Also move current folder contents?
 settings_tab.move_error.other=There was an error moving the folder\:\n{0}
 settings_tab.move_error.temp=Could not create temporary folder
 settings_tab.move_error.title=Error moving folder contents
-settings_tab.online_storage=Online storage
 settings_tab.select_directory.text=Select folder location
 settings_tab.subdir.title=Subdirectory
 settings_tab.subdir.text=It is not possible to move a folder to one of its subdirectories.
@@ -1174,7 +1146,6 @@ settings_tab.working.title=Moving folder
 settings_tab.preview_warning_title=Convert
 settings_tab.preview_warning_message=Do you want to convert this folder to a preview?
 settings_tab.preview_warning_convert=Convert
-settings_tab.delete_folder=Delete folder
 settings_tab.download_script=Script after download
 settings_tab.download_script.select=Select
 
