--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -297,7 +297,7 @@ transfer_mode.no_sync.name=No synchronization
 pro.download_csv.description=Downloads the list of accounts as CSV
 pro.download_csv.key=D
 pro.download_csv.name=Download as CSV
-pro.http.options.directconnect=Direct connection to the Internet
+pro.http.options.directconnect=Direct connection to Internet
 pro.http.options.host=Hostname
 pro.http.options.httpproxy=HTTP-Proxy
 pro.http.options.password=Password
@@ -972,7 +972,7 @@ preferences.dialog.dialogs.preview=Preview
 preferences.dialog.dialogs.notifications=Notifications
 preferences.dialog.dialogs.notification.preview.title=Preview
 preferences.dialog.dialogs.notification.preview.text=This is a preview of a notification
-preferences.dialog.dialogs.warn_on_limited_connectivity=Warn on limited connectivity (No incomming connections)
+preferences.dialog.dialogs.warn_on_limited_connectivity=Warn on limited connectivity (no incomming connections)
 preferences.dialog.dialogs.warn_on_possible_file_name_problems=Warn on possible filename problems (e.g. too long for Apple classic)
 preferences.dialog.dyn_dns.title=DynDNS
 preferences.dialog.dyn_dns=My (dynamic) DNS
@@ -1035,7 +1035,7 @@ preferences.dialog.show_preview_panel.tooltip=<HTML><BODY>You can find the image
 preferences.dialog.show_preview_panel=Enable internal image preview
 preferences.dialog.show_system_notifications=Show system notifications when minimized
 preferences.dialog.silent_throttle.tooltip=Set the bandwidth usage throttle in silent mode (only works for limits other than 0)
-preferences.dialog.silent_throttle=Silentmode bandwidth throttle
+preferences.dialog.silent_throttle=Silent-mode bandwidth throttle
 preferences.dialog.online_storage.text=Use Online Storage
 preferences.dialog.online_storage.tip=Setup PowerFolder to use Online Storage
 preferences.dialog.start_with_windows=Start PowerFolder with Windows
