Better problem description.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -139,7 +139,7 @@ action_open_explorer.description=Open this folder in your operating system's fil
 action_open_explorer.key=O
 action_open_explorer.name=Open Folder
 
-action_open_problem.description=Open this problem in your browser
+action_open_problem.description=Open details of this problem in your browser
 action_open_problem.key=O
 action_open_problem.name=Open
 
