Rewording for UDT connections

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1053,7 +1053,7 @@ preferences.dialog.main_on_top=Main frame stays on top of other windows
 preferences.dialog.translucent_text=Translucency
 preferences.dialog.ui.title=User Interface
 preferences.dialog.use.relayed.connections=Use relayed connections
-preferences.dialog.use.udt.connections=Use NAT traversal
+preferences.dialog.use.udt.connections=Use UDT connections
 preferences.dialog.use_delta_on_lan.tooltip=Enable if on a slow network (this may effect your CPU load)
 preferences.dialog.use_delta_on_lan=Use delta sync on LAN
 preferences.dialog.use_pf_icon=Use PowerFolder icon in Windows
