refs #1046 initial commit fixes #1238

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -849,6 +849,12 @@ invitation.utils.unable.write.text=Error while writing invitation, please try ag
 invitation.utils.unable.write.title=Unable to write invitation
 invitation_files.description=PowerFolder invitations
 
+permissions.folder.read_write=Read/Write
+permissions.folder.read=Read
+permissions.folder.admin=Admin
+permissions.folder.owner=Owner
+permissions.unknown=Unknown ({0})
+
 limited_connection.dont_autodetect=No longer detect limited connectivity
 limited_connection.text=PowerFolder has detected limited connectivity to the network.\nThis may caused by a firewall, router or windows connection share.\nHow to improve your connectivity is answered in our documentation.\nhttp\://docs.powerfolder.com
 limited_connection.title=Limited connectivity
