--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -398,6 +398,20 @@ tip_of_the_day.text_1=Demo Tip of the Day 1
 tip_of_the_day.text_2=Demo Tip of the Day 2
 tip_of_the_day.text_3=Demo Tip of the Day 3
 
+################
+# Update check #
+################
+
+dialog.update_check.downloadAndUpdate=Download and update now
+dialog.update_check.downloadAndUpdateSilent=Download and silently update now
+dialog.update_check.failed.text=Update failed. Please check your Internet connection.\n \nPowerFolder Pro\: Please also check your Update-Service account under\nSettings/Pro Settings/PowerFolder Pro Loader.
+dialog.update_check.failed.title=Update failed
+dialog.update_check.gotoHomepage=Go to PowerFolder homepage
+dialog.update_check.noUpdateAvailable=This version is up to date
+dialog.update_check.nothingNeverAsk=Nothing and never ask again
+dialog.update_check.text=A newer version of PowerFolder is available            \n\nThis version\: v{0}\nLatest available\: v{1} (newer)\n
+dialog.update_check.title=Newer version available
+
 ###################
 # Everything Else #
 ###################
@@ -671,7 +685,6 @@ folder.info_tip=Contains files and folders managed by PowerFolder
 folder_create.os_error.text=Unable to setup the Online Storage to backup folder {0}
 folder_create.recycle_error.text=Unable to create recycle bin for folder {0}
 folder_create.dialog.select_file.text=Select file
-folder_create.progress.text=Creating PowerFolder '{0}'
 
 folder_problem.unsynchronized=Folder {0} has not been synchronized in {1} day(s).
 folder_problem.table_model.date=Date
@@ -720,8 +733,6 @@ folder_repository.warn_on_close.text=These folders are not synchronized yet\:\n\
 folder_repository.warn_on_close_eta.text=These folders are not synchronized yet\:\n\n\n\n{0}\n\nETA: {1}
 folder_repository.warn_on_close.title=Synchronizing
 folder_repository.continue_exit=Exit anyways
-
-folderinfo.total_sync=Total sync
 
 folders_tab.all_folders=All folders
 folders_tab.folder_type_list.text=Select folder types to display
@@ -849,12 +860,6 @@ invitation.utils.unable.write.text=Error while writing invitation, please try ag
 invitation.utils.unable.write.title=Unable to write invitation
 invitation_files.description=PowerFolder invitations
 
-permissions.folder.read_write=Read/Write
-permissions.folder.read=Read
-permissions.folder.admin=Admin
-permissions.folder.owner=Owner
-permissions.unknown=Unknown ({0})
-
 limited_connection.dont_autodetect=No longer detect limited connectivity
 limited_connection.text=PowerFolder has detected limited connectivity to the network.\nThis may caused by a firewall, router or windows connection share.\nHow to improve your connectivity is answered in our documentation.\nhttp\://docs.powerfolder.com
 limited_connection.title=Limited connectivity
@@ -943,7 +948,7 @@ percent.place.holder={0}%
 permissions.read_write=Read/Write
 permissions.read=Read
 permissions.admin=Admin
-permissions.unknown=Unknown ({0})
+permissions.owner=Owner
 
 plugin_disable.description=Disable (and stop) Plugin
 plugin_disable.key=D
@@ -1313,8 +1318,6 @@ wizard.multi_folder_setup.no_name.title=No name
 wizard.multi_folder_setup.no_name.text=No name has been entered for {0}
 wizard.multi_online_storage_setup.title=Configure Online Storage Folders
 wizard.pfwizard.title=Folder Wizard
-wizard.project_name.choose=Choose project name
-wizard.project_name.enter_name=Enter the name of your project
 wizard.project_name.folder_project_success=You successfully set up a project folder\!\n
 wizard.select_online_storage.title=Select Online Storage folders
 wizard.select_online_storage.info=Please select Online Storage folders to join locally
