Tell a friend link, refs #1567

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -850,6 +850,8 @@ home_tab.online_storage.remaining={0} day(s) remaining
 home_tab.online_storage.remaining.tips=Your account will expire in {0} days
 home_tab.online_storage.usage=Usage: {0}%
 home_tab.synchronizing=Synchroniation in progress...
+home_tab.tell_friend.text=Tell a friend about PowerFolder
+home_tab.tell_friend.tip=Click here to send an email inviting friends to use PowerFolder
 home_tab.total={0} total
 home_tab.you_have=You have:
 
