--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1376,6 +1376,10 @@ wizard.what_to_do.synchronized_folder=Synchronize computer
 wizard.what_to_do.title=What do you want to do?
 
 wizard.tell_friend.title=Tell a friend about PowerFolder
+wizard.tell_friend.add_email_address=Please enter email addresses (one per line)
+wizard.tell_friend.personal_message=Please enter a message for the receiver(s) (optional)
+wizard.tell_friend.title.warning_title=Bad email address
+wizard.tell_friend.title.warning_bad_email='{0}' is not a valid email address
 
 wizard.multi_online_storage_setup.local_folder_location=Local folder location
 wizard.multi_online_storage_setup.select_directory=Select directory
