Tell a friend wizard, refs #1567

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -399,7 +399,7 @@ tip_of_the_day.text_2=Demo Tip of the Day 2
 tip_of_the_day.text_3=Demo Tip of the Day 3
 
 ################
-# Update check #
+# Update Check #
 ################
 
 dialog.update_check.downloadAndUpdate=Download and update now
@@ -1376,10 +1376,13 @@ wizard.what_to_do.synchronized_folder=Synchronize computer
 wizard.what_to_do.title=What do you want to do?
 
 wizard.tell_friend.title=Tell a friend about PowerFolder
+wizard.tell_friend.information1=Send emails to friends, inviting them to use PowerFolder.
+wizard.tell_friend.information2=Emails will be sent direct from PowerFolder central.
 wizard.tell_friend.add_email_address=Please enter email addresses (one per line)
 wizard.tell_friend.personal_message=Please enter a message for the receiver(s) (optional)
 wizard.tell_friend.title.warning_title=Bad email address
 wizard.tell_friend.title.warning_bad_email='{0}' is not a valid email address
+wizard.tell_friend.success=Emails have been sent to the recipients.
 
 wizard.multi_online_storage_setup.local_folder_location=Local folder location
 wizard.multi_online_storage_setup.select_directory=Select directory
