--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -947,10 +947,10 @@ online_storage_component.online_storage_warning=Online storage quota exceeded
 
 percent.place.holder={0}%
 
-permissions.read_write=Read/Write
-permissions.read=Read
-permissions.admin=Admin
-permissions.owner=Owner
+permissions.folder.read_write=Read/Write
+permissions.folder.read=Read
+permissions.folder.admin=Admin
+permissions.folder.owner=Owner
 
 plugin_disable.description=Disable (and stop) Plugin
 plugin_disable.key=D
