Preview folder sync processing, fixes #1632

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -708,6 +708,7 @@ folder_information_card.problems.tips=Shows problems for this folder
 folder_join.dialog.title=Join PowerFolder {0}?
 folder_join.join.key=J
 folder_join.join=Join
+folder_join.location.tip=Folder location
 
 folder_member_table_model.icon=
 folder_member_table_model.local_size=Local size
