Rename Folders to Links, refs #1621

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1071,7 +1071,7 @@ preferences.dialog.use.udt.connections=Use UDT connections
 preferences.dialog.use_delta_on_lan.tooltip=Enable if on a slow network (this may effect your CPU load)
 preferences.dialog.use_delta_on_lan=Use delta sync on LAN
 preferences.dialog.use_pf_icon=Use PowerFolder icon in Windows
-preferences.dialog.show_pf_favorite=Display PowerFolders directory in Favorites 
+preferences.dialog.show_pf_link=Display PowerFolders directory in Links 
 preferences.dialog.use_recycle_bin=Use recycle bin (default)
 preferences.dialog.use_mass_delete=Use mass delete protection
 preferences.dialog.mass_delete_threshold=Mass delete threshold
