--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -828,7 +828,7 @@ home_tab.files_uploaded=File(s) uploaded
 home_tab.folders=Folder(s)
 home_tab.in_sync=All folders are synchronized
 home_tab.sync_eta=All folders will be synchronized {0}
-home_tab.none_synced=No folders synchronized
+home_tab.never_synced=Folders never synchronized
 home_tab.no_folders=No folders configured
 home_tab.last_synced=Last synchronized {0}
 home_tab.new_friend_requests=New friend request(s)
