--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1327,7 +1327,7 @@ wizard.select_online_storage.title=Select Online Storage folders
 wizard.select_online_storage.info=Please select Online Storage folders to join locally
 wizard.select_online_storage.recycle_bin.text=Use recycle bin
 wizard.select_online_storage.desktop_shortcut.text=Create desktop shortcut
-wizard.send_invitations.invitation_hint1=Enter a computer name or email adress, and add to list
+wizard.send_invitations.invitation_hint1=Enter a computer name or email address, and add to list
 wizard.send_invitations.invitation_hint2=or select computers to invite
 wizard.send_invitations.invitation_text=Enter a message for the receiver (optional)
 wizard.send_invitations.join=Invitations are required to join a folder.
