--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1113,7 +1113,7 @@ send_invitations_advanced.permissions_hint=Permissions
 
 settings_tab.add_a_pattern.example=example/*.jpg
 settings_tab.add_a_pattern.text=Enter a pattern to exclude files from synchronization
-settings_tab.add_a_pattern.title=Add hignore pattern
+settings_tab.add_a_pattern.title=Add ignore pattern
 settings_tab.add_patterns.text_1=The following ignore patterns will be added
 settings_tab.add_patterns.title=Add ignore patterns
 settings_tab.archive_mode=Backup local file versions
