--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -785,7 +785,7 @@ general.folder=Folder
 general.folder_name=Name
 general.friday=Friday
 general.hours=Hour(s)
-general.invitor=Invitor
+general.inviter=Inviter
 general.lan_only=LAN only
 general.local_copy_at=Local copy at
 general.localized_date_format=MMMM dd yyyy
@@ -850,7 +850,7 @@ home_tab.online_storage.no_password.tips=Click here to enter account password
 home_tab.online_storage.remaining={0} day(s) remaining
 home_tab.online_storage.remaining.tips=Your account will expire in {0} days
 home_tab.online_storage.usage=Usage: {0}%
-home_tab.synchronizing=Synchroniation in progress...
+home_tab.synchronizing=Synchronization in progress...
 home_tab.tell_friend.text=Tell a friend about PowerFolder
 home_tab.tell_friend.tip=Click here to send an email inviting friends to use PowerFolder
 home_tab.total={0} total
@@ -986,7 +986,7 @@ preferences.dialog.dialogs.preview=Preview
 preferences.dialog.dialogs.notifications=Notifications
 preferences.dialog.dialogs.notification.preview.title=Preview
 preferences.dialog.dialogs.notification.preview.text=This is a preview of a notification
-preferences.dialog.dialogs.warn_on_limited_connectivity=Warn on limited connectivity (no incomming connections)
+preferences.dialog.dialogs.warn_on_limited_connectivity=Warn on limited connectivity (no incoming connections)
 preferences.dialog.dialogs.warn_on_possible_file_name_problems=Warn on possible filename problems (e.g. too long for Apple classic)
 preferences.dialog.dyn_dns.title=DynDNS
 preferences.dialog.dyn_dns=My (dynamic) DNS
@@ -1170,10 +1170,10 @@ status_bar.status_change.title=Connection Status
 status_bar.sleep.tips=Disable folder change scanning
 status_bar.no_sleep.tips=Enable folder change scanning
 status_bar.poor_quality_warning.title=Poor connection quality
-status_bar.poor_quality_warning.text=*** TOT, What do we want to say here? ***
+status_bar.poor_quality_warning.text=Most connections are being routed via PowerFolder servers
 
-synchronisation.notice.title=Activated transfer mode {0}
-synchronisation.warning.automatic_deletions_notice=This mode will also synchronize file deletions\!
+synchronization.notice.title=Activated transfer mode {0}
+synchronization.warning.automatic_deletions_notice=This mode will also synchronize file deletions\!
 
 system_monitor.cpu_usage=CPU Usage:
 system_monitor.heap_usage=Heap Usage:
