--- a/build.xml
+++ b/build.xml
@@ -271,7 +271,7 @@ For creation of the installer:
 		<mkdir dir="${build.reports.dir}/html" />
 		<mkdir dir="${build.reports.dir}/htmlnoframes" />
 		<!-- Batchrun all tests -->
-		<junit printsummary="yes" haltonfailure="false" maxmemory="1024m">
+		<junit printsummary="yes" haltonfailure="false" fork="yes" maxmemory="2048m">
 			<classpath>
 				<pathelement location="${build.dir}" />
 				<fileset refid="libs" />
