Add File Versions tab, refs #1633

--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -11,7 +11,7 @@ action_clear_problem.icon=icons/Clear.gif
 action_configure_transfer_mode.icon=icons/Edit.png
 action_connect.icon=icons/ConnectBright.png
 action_delete_file.icon=icons/Delete.gif
-action_details.icon=icons/Details.gif
+action_details.icon=icons/Details.png
 action_delete_transfer_mode.icon=icons/Delete.gif
 action_download_file.icon=icons/Download.png
 action_edit_ignore.icon=icons/Edit.png
@@ -89,6 +89,8 @@ edit.icon=icons/Edit.png
 expected.icon=icons/Expected.gif
 file_share_picto.icon=icons/pictos/FileShare.gif
 files.icon=icons/Files.png
+file_details.icon=icons/FileDetails.gif
+file_version.icon=icons/FileVersion.png
 filter_text_field_clear_button_hover.icon=icons/FilterTextFieldClearButtonHover.png
 filter_text_field_clear_button_normal.icon=icons/FilterTextFieldClearButtonNormal.png
 filter_text_field_clear_button_push.icon=icons/FilterTextFieldClearButtonPush.png
