--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -624,6 +624,10 @@ file_details_panel.deleted=Deleted
 file_details_panel.expected=Expected
 file_details_panel.name=Name
 file_details_panel.modified_date=Modified on
+files_table_panel.file_details_tab.text=File Details
+files_table_panel.file_details_tab.tip=Display information about the file
+files_table_panel.file_versions_tab.text=File Versions
+files_table_panel.file_versions_tab.tip=Display file version history
 
 file_info.name=Name
 file_info.deleted=Deleted
