--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -638,6 +638,8 @@ file_info.new_version_available=New version of file available
 file_info.remote_deleted=Newer version deleted by other computer
 file_info.recently_downloaded=Recently downloaded
 
+file_version_tab.no_versions_available=No version history available
+file_version_tab.loading=Loading version history...
 files_table_model.name=Name
 files_table_model.size=Size
 files_table_model.modified_by=Modified by
