--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -714,6 +714,7 @@ folder_join.location.tip=Folder location
 folder_member_table_model.icon=
 folder_member_table_model.local_size=Local size
 folder_member_table_model.name=Name
+folder_member_table_model.username=Account
 folder_member_table_model.sync_status=Sync status
 
 folder_panel.settings_tab.addbutton.name=Add
