Display archives, refs #1633

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -439,7 +439,7 @@ apps.dir.outlook=Outlook
 apps.dir.sunbird=Sunbird
 apps.dir.thunderbird=Thunderbird
 
-archive.no_backup=No Backup
+archive.no_backup=No backup
 archive.full_backup=Backup before download
 
 chat_frame.title=Chat
@@ -639,7 +639,6 @@ file_info.remote_deleted=Newer version deleted by other computer
 file_info.recently_downloaded=Recently downloaded
 
 file_version_tab.no_versions_available=No version history available
-file_version_tab.loading=Loading version history...
 files_table_model.name=Name
 files_table_model.size=Size
 files_table_model.modified_by=Modified by
@@ -668,6 +667,10 @@ files_tab.combo.new_files_only=New files only
 files_tab.combo.tool_tip=Select files to display
 files_tab.flat_view.text=Flat view
 files_tab.flat_view.tip=Flatten view of folder directory structure
+
+file_versions_table_model.version=Version
+file_versions_table_model.size=Size
+file_versions_table_model.date=Date
 
 filter_text_field.clear.hint=Clear filtering
 filter_text_field.glass.hint=Select filter mode
