Restore action, refs #1633

--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -40,6 +40,7 @@ action_remove_directory.icon=icons/Delete.gif
 action_remove_ignore.icon=icons/Delete.gif
 action_remove_invitee.icon=icons/Delete.gif
 action_restore_file.icon=icons/Restore.gif
+action_restore_archive.icon=icons/Restore.gif
 action_search_invitee.icon=icons/FindComputers.gif
 action_single_file_transfer.icon=icons/ArrowRight.gif
 action_single_file_transfer_accept.icon=icons/Checked.gif
