--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -219,6 +219,10 @@ action_restore_file.description=Undelete file
 action_restore_file.key=R
 action_restore_file.name=Restore
 
+action_restore_archive.description=Restore archived file version
+action_restore_archive.key=R
+action_restore_archive.name=Restore
+
 action_skip_login.description=You may configure Online Storage later
 action_skip_login.key=N
 action_skip_login.name=No thanks, I don't want to use the Online Storage
