Restore dialog, refs #1633

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -541,6 +541,11 @@ dialog.node_select.multi_computers=Multiple computers selected
 dialog.node_select.no_computers=No computers selected
 dialog.node_select.text=Select computers to invite. Hold down Ctrl key to select multiple computers.
 dialog.node_select.title=Select computers
+dialog.restore_archive.title=Restore archived file
+dialog.restore_archive.restore=Restore file version to its original location
+dialog.restore_archive.save=Save file version to a new location
+dialog.restore_archive.file_location=File location
+dialog.restore_archive.file_location.tip=Select file location
 dialog.single_file_transfer.computer=Computer
 dialog.single_file_transfer.file_name=File name
 dialog.single_file_transfer.select_computer.tip=Select computer
