--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -772,6 +772,7 @@ friend_search.no_computers_found=No computers found
 friend_search.node_table.ip=IP
 friend_search.node_table.last_seen_online=Last seen online
 friend_search.node_table.name=Name
+friend_search.node_table.account=User
 friend_search.node_table.on_local_network=On LAN
 
 folders_tab.no_folders_available=No folders available
