--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -727,7 +727,8 @@ folder_member_table_model.icon=
 folder_member_table_model.local_size=Local size
 folder_member_table_model.name=Name
 folder_member_table_model.account=Account
-folder_member_table_model.sync_status=Sync status
+folder_member_table_model.sync_status=Sync
+folder_member_table_model.permission=Permission
 
 folder_panel.settings_tab.addbutton.name=Add
 folder_panel.settings_tab.editbutton.name=Edit
