--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -725,8 +725,8 @@ folder_join.location.tip=Folder location
 
 folder_member_table_model.icon=
 folder_member_table_model.local_size=Local size
-folder_member_table_model.name=Name
-folder_member_table_model.account=Account
+folder_member_table_model.name=Computer
+folder_member_table_model.account=User
 folder_member_table_model.sync_status=Sync
 folder_member_table_model.permission=Permission
 
@@ -772,8 +772,8 @@ friend.search.personal.message.title=Add friend message
 friend_search.no_computers_found=No computers found
 friend_search.node_table.ip=IP
 friend_search.node_table.last_seen_online=Last seen online
-friend_search.node_table.name=Name
-friend_search.node_table.account=Account
+friend_search.node_table.name=Computer
+friend_search.node_table.account=User
 friend_search.node_table.on_local_network=On LAN
 
 folders_tab.no_folders_available=No folders available
