Restore functionality, fixes #1633

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -542,6 +542,7 @@ dialog.node_select.no_computers=No computers selected
 dialog.node_select.text=Select computers to invite. Hold down Ctrl key to select multiple computers.
 dialog.node_select.title=Select computers
 dialog.restore_archive.title=Restore archived file
+dialog.restore_archive.save_error=There was a problem saving the file to disk: {0}
 dialog.restore_archive.restore=Restore file version to its original location
 dialog.restore_archive.save=Save file version to a new location
 dialog.restore_archive.file_location=File location
