--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1348,7 +1348,7 @@ wizard.select_online_storage.desktop_shortcut.text=Create desktop shortcut
 wizard.send_invitations.invitation_hint1=Enter a computer name or email address, and add to list
 wizard.send_invitations.invitation_hint2=or select computers to invite
 wizard.send_invitations.invitation_text=Enter a message for the receiver (optional)
-wizard.send_invitations.join=Invitations are required to join a folder.
+wizard.send_invitations.information=What is an Invitation?
 wizard.send_invitations.never_untrusted=Never give out invitations to untrusted people.
 wizard.send_invitations.title=Send Invitation
 wizard.send_invitations.send_success=Invitation sent
