Addpersonal message link, refs #1565

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -541,6 +541,8 @@ dialog.node_select.multi_computers=Multiple computers selected
 dialog.node_select.no_computers=No computers selected
 dialog.node_select.text=Select computers to invite. Hold down Ctrl key to select multiple computers.
 dialog.node_select.title=Select computers
+dialog.personalized_message.title=Personalized message
+dialog.personalized_message.hint=Add a personalized message for the recipient
 dialog.restore_archive.title=Restore archived file
 dialog.restore_archive.save_error=There was a problem saving the file to disk: {0}
 dialog.restore_archive.restore=Restore file version to its original location
@@ -1347,13 +1349,13 @@ wizard.select_online_storage.recycle_bin.text=Use recycle bin
 wizard.select_online_storage.desktop_shortcut.text=Create desktop shortcut
 wizard.send_invitations.invitation_hint1=Enter a computer name or email address, and add to list
 wizard.send_invitations.invitation_hint2=or select computers to invite
-wizard.send_invitations.invitation_text=Enter a message for the receiver (optional)
 wizard.send_invitations.information=What is an Invitation?
-wizard.send_invitations.never_untrusted=Never give out invitations to untrusted people.
 wizard.send_invitations.title=Send Invitation
 wizard.send_invitations.send_success=Invitation sent
 wizard.send_invitations.send_success_info=You successfully sent the invitation.
 wizard.send_invitations_advanced.title=Send Invitation - Advanced
+wizard.send_invitations.add_message.text=Attach personalized message
+wizard.send_invitations.add_message.tip=Add a personalized message that will be sent with this invitation
 wizard.setup_success=Setup successfully
 wizard.success_join=You have successfully joined the folder\!
 wizard.webservice.enter_account=Please enter your account details to login
