Tidy status bar

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -191,10 +191,6 @@ action_open_uploads_information.description=Show details of recent file uploads
 action_open_uploads_information.key=U
 action_open_uploads_information.name=Uploads
 
-action_pending_messages.description=Show new messages received
-action_pending_messages.key=S
-action_pending_messages.name=Show messages
-
 action_reconnect.description=Reconnect to this computer now
 action_reconnect.key=R
 action_reconnect.name=Reconnect
@@ -1178,9 +1174,11 @@ skin.white_vision=White Vision
 
 status.download.text=Data download rate
 status.download=%.2f KB/s
-status.port.text=PowerFolder connection port number
+status.port.tip=PowerFolder connection port number
 status.upload.text=Data upload rate
 status.upload=%.2f KB/s
+status.port.text=Port: {0}
+status.chat_pending=There are chat messages waiting
 
 status_bar.status_change.connected=PowerFolder is connected
 status_bar.status_change.disabled=PowerFolder is disabled
