Restore overwrite check dialog, refs #1633

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -545,6 +545,9 @@ dialog.restore_archive.restore=Restore file version to its original location
 dialog.restore_archive.save=Save file version to a new location
 dialog.restore_archive.file_location=File location
 dialog.restore_archive.file_location.tip=Select file location
+dialog.restore_archive.overwrite_title=Overwrite file
+dialog.restore_archive.overwrite_message=File already exists. Overwrite file?
+dialog.restore_archive.overwrite=Overwrite
 dialog.single_file_transfer.computer=Computer
 dialog.single_file_transfer.file_name=File name
 dialog.single_file_transfer.select_computer.tip=Select computer
