Fix annoying 'flicker' of main tabs at start.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -695,7 +695,7 @@ find_computers_panel.search_for_computer.tooltip=Enter three or more characters 
 folder.info_tip=Contains files and folders managed by PowerFolder
 
 folder_create.os_error.text=Unable to setup the Online Storage to backup folder {0}
-folder_create.dialog.select_file.text=Select file
+folder_create.dialog.select_directory.text=Select directory
 
 folder_problem.unsynchronized=Folder {0} has not been synchronized in {1} day(s).
 folder_problem.table_model.date=Date
