Added missing translation

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -32,7 +32,7 @@ action_add_directory.key=A
 action_add_directory.name=Add
 
 action_add_friend.description=Add computer to friend list
-action_add_friend.key=F
+action_add_friend.key=A
 action_add_friend.name=Add
 
 action_add_ignore.description=Add a pattern to the ignore list
@@ -192,8 +192,12 @@ action_open_uploads_information.key=U
 action_open_uploads_information.name=Uploads
 
 action_reconnect.description=Reconnect to this computer now
-action_reconnect.key=R
+action_reconnect.key=C
 action_reconnect.name=Reconnect
+
+action_members_refresh.description=Refreshes member list and permissions
+action_members_refresh.key=R
+action_members_refresh.name=Refresh
 
 action_remove_invitee.description=Remove invitee
 action_remove_invitee.key=R
@@ -783,6 +787,7 @@ friends_panel.unable_to_connect=Currently online (Unable to connect)
 
 general.application.name=PowerFolder
 general.accept=Accept
+general.reject=Reject
 general.cancel.key=C
 general.cancel=Cancel
 general.close.key=C
