--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -843,7 +843,9 @@ home_tab.computers=Computer(s)
 home_tab.files_available=File(s) available
 home_tab.new_warnings=Warning(s)
 home_tab.files_downloaded=File(s) downloaded
+home_tab.files_downloaded_active=File(s) downloaded ({0} KB/s)
 home_tab.files_uploaded=File(s) uploaded
+home_tab.files_uploaded_active=File(s) uploaded ({0} KB/s)
 home_tab.folders=Folder(s)
 home_tab.in_sync=All folders are synchronized
 home_tab.sync_eta=All folders will be synchronized {0}
