--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -2,7 +2,7 @@
 
 action_abort_download.icon=icons/Abort.gif
 action_add_friend.icon=icons/AddFriend.gif
-action_add_invitee.icon=icons/AddFriend.gif
+action_add_invitee.icon=icons/Invite.png
 action_add_ignore.icon=icons/Add.png
 action_add_directory.icon=icons/Add.png
 action_clear_completed_downloads.icon=icons/Clear.gif
