Spacers between member types, refs #1646

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -937,6 +937,10 @@ mp3_file_info.size=Size
 mp3_file_info.stereo_mono=Stereo/Mono
 mp3_file_info.title=Title
 
+computer_list.my_computers=My Computers
+computer_list.friends=Friends
+computer_list.lan=LAN
+
 network_statistics_panel.connected_computers=Connected computers
 network_statistics_panel.known_computers=Known computers
 network_statistics_panel.local_folder_count=Number of local folders (joined)
