Rework ui member display, refs #1646

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -461,14 +461,15 @@ check_status.powerfolders={0} in {1} PowerFolder(s)
 check_status.syncing=Synchronizing {0} PowerFolder(s)
 check_status.title=Status of My PowerFolders
 
-computers_tab.computer_type_list.text=Select computer types to display
-computers_tab.all_friends_online_lan=All friends / online LAN
-computers_tab.online_friends=Online friends
-computers_tab.online_friends_online_lan=Online friends / online LAN
 computers_tab.no_computers_available=No computers available
+computers_tab.show_offline=Show offline
 
 connect.dialog.text=Please enter the hostname or IP of the computer you want to connect.\n\nPowerFolder automatically connects to the network after a short time;\nuse this option if you want to manually connect to a computer.\n
 connect.dialog.title=Manually connect to a PowerFolder computer
+
+computer_list.my_computers=My Computers
+computer_list.friends=Friends
+computer_list.lan=LAN
 
 connection_quality_good.text=Good connection quality
 connection_quality_medium.text=Medium connection quality
@@ -787,7 +788,6 @@ friends_panel.unable_to_connect=Currently online (Unable to connect)
 
 general.application.name=PowerFolder
 general.accept=Accept
-general.reject=Reject
 general.cancel.key=C
 general.cancel=Cancel
 general.close.key=C
@@ -936,10 +936,6 @@ mp3_file_info.sample_rate=Sample rate
 mp3_file_info.size=Size
 mp3_file_info.stereo_mono=Stereo/Mono
 mp3_file_info.title=Title
-
-computer_list.my_computers=My Computers
-computer_list.friends=Friends
-computer_list.lan=LAN
 
 network_statistics_panel.connected_computers=Connected computers
 network_statistics_panel.known_computers=Known computers
@@ -1174,11 +1170,7 @@ skin.silver_moon=Silver Moon
 skin.sky_metallic=Sky Metallic
 skin.white_vision=White Vision
 
-status.download.text=Data download rate
-status.download=%.2f KB/s
 status.port.tip=PowerFolder connection port number
-status.upload.text=Data upload rate
-status.upload=%.2f KB/s
 status.port.text=Port: {0}
 status.chat_pending=There are chat messages waiting
 
