--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -444,7 +444,7 @@ apps.dir.sunbird=Sunbird
 apps.dir.thunderbird=Thunderbird
 
 archive.no_backup=No backup
-archive.full_backup=Backup before download
+archive.full_backup=Full backup
 
 chat_frame.title=Chat
 chat_frame.tool_tip=Chat with {0}
@@ -1129,7 +1129,7 @@ settings_tab.add_a_pattern.text=Enter a pattern to exclude files from synchroniz
 settings_tab.add_a_pattern.title=Add ignore pattern
 settings_tab.add_patterns.text_1=The following ignore patterns will be added
 settings_tab.add_patterns.title=Add ignore patterns
-settings_tab.archive_mode=Backup local file versions
+settings_tab.archive_mode=File archive (local)
 settings_tab.confirm_local_folder_move.text=Local folder will be moved from\n{0}\nto\n{1}.
 settings_tab.confirm_local_folder_move.title=Confirm move
 settings_tab.edit_a_pattern.text=Edit a pattern to exclude files from synchronization
