Fixed missing translation

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -821,6 +821,7 @@ general.powerfolder=PowerFolder
 general.preview_folder=Preview folder
 general.proxy_settings=Proxy settings
 general.saturday=Saturday
+general.reject=Reject
 general.save.key=S
 general.save=Save
 general.search=Search
