Edit button for archive config, refs #1633

--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -15,6 +15,7 @@ action_details.icon=icons/Details.png
 action_delete_transfer_mode.icon=icons/Delete.gif
 action_download_file.icon=icons/Download.png
 action_edit_ignore.icon=icons/Edit.png
+action_edit_archive.icon=icons/Edit.png
 action_find_computers.icon=icons/FindComputers.gif
 action_folder_problem.icon=icons/Warning.png
 action_help.icon=icons/Question.gif
