--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -91,6 +91,10 @@ action_edit_ignore.description=Edit a pattern in the ignore list
 action_edit_ignore.key=E
 action_edit_ignore.name=Edit
 
+action_edit_archive.description=Edit archive mode details
+action_edit_archive.key=E
+action_edit_archive.name=Edit Archive
+
 action_configure_transfer_mode.description=Configure this transfer mode
 action_configure_transfer_mode.key=C
 action_configure_transfer_mode.name=Configure
