Begin archive editor (and remove lots of random borders), refs #1633

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -512,6 +512,7 @@ dialog.bind_error=Unable to bind port\!
 dialog.connect.connecting=Connecting
 dialog.connect.connecting_to=Connecting to {0}...
 dialog.connection_problem=Connection problem
+dialog.copy_or_move_file_archiver_edit.title=Edit file archiver
 dialog.create_edit_profile.auto_download=Autodownload
 dialog.create_edit_profile.cannot_save_name=This transfer mode cannot be saved because\nthere is already a transfer mode named {0}
 dialog.create_edit_profile.cannot_save_profile=This transfer mode cannot be saved because\nit is identical to transfer mode {0}
