--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -218,7 +218,7 @@ sync_push_17.icon=icons/sync/push/sync_17.png
 system_monitor.icon=icons/SystemMonitor.png
 systray_default.icon=icons/PowerFolder32x32.gif
 unknown.icon=icons/Unknown.gif
-updates.icon=icons/Updates.gif
+#updates.icon=icons/Updates.gif
 upload.icon=icons/Upload.png
 upload_active.icon=icons/UploadActive.gif
 upload_picto.icon=icons/pictos/Upload.png
