Edit CopyOrMove archive config, refs #1633

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -513,6 +513,9 @@ dialog.connect.connecting=Connecting
 dialog.connect.connecting_to=Connecting to {0}...
 dialog.connection_problem=Connection problem
 dialog.copy_or_move_file_archiver_edit.title=Edit file archiver
+dialog.copy_or_move_file_archiver_edit.info=Configure the number of archive versions to keep
+dialog.copy_or_move_file_archiver_edit.unlimited=Unlimited
+dialog.copy_or_move_file_archiver_edit.versions=Versions
 dialog.create_edit_profile.auto_download=Autodownload
 dialog.create_edit_profile.cannot_save_name=This transfer mode cannot be saved because\nthere is already a transfer mode named {0}
 dialog.create_edit_profile.cannot_save_profile=This transfer mode cannot be saved because\nit is identical to transfer mode {0}
@@ -1099,7 +1102,7 @@ preferences.dialog.use.udt.connections=Use UDT connections
 preferences.dialog.use_delta_on_lan.tooltip=Enable if on a slow network (this may effect your CPU load)
 preferences.dialog.use_delta_on_lan=Use delta sync on LAN
 preferences.dialog.use_pf_icon=Use PowerFolder icon in Windows
-preferences.dialog.show_pf_link=Display PowerFolders directory in Links 
+preferences.dialog.show_pf_link=Display PowerFolders directory in Links
 preferences.dialog.use_mass_delete=Use mass delete protection
 preferences.dialog.mass_delete_threshold=Mass delete threshold
 preferences.dialog.use_zip_on_lan.tooltip=Enable if files to transfer are easy to compress (this may effect your CPU load)
