--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -140,7 +140,7 @@ pac_15.icon=icons/pac/pac15.gif
 pac_16.icon=icons/pac/pac16.gif
 pac_dot.icon=icons/pac/pacDot.gif
 picto_logo.icon=icons/pictos/PowerFolderLogo96x96.png
-play.icon=icons/Play.gif
+play.icon=icons/Play.png
 power_folder_logo_400_ui.icon=icons/pictos/PowerFolderLogo400UI.png
 powerfolder_32.icon=icons/PowerFolder32x32.gif
 preferences.icon=icons/Preferences.png
@@ -157,7 +157,7 @@ sort_down.icon=icons/SortDown.gif
 sort_up.icon=icons/SortUp.gif
 splash.icon=icons/Splash.png
 stop.icon=icons/Abort.gif
-suspend.icon=icons/Suspend.gif
+suspend.icon=icons/Suspend.png
 sync.icon=icons/Sync.png
 sync_48.icon=icons/pictos/Sync-48.png
 sync_hover_00.icon=icons/sync/hover/sync_00.png
