Upload and Download stats, refs #1661

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1191,6 +1191,9 @@ status_bar.no_sleep.tips=Enable folder change scanning
 status_bar.poor_quality_warning.title=Poor connection quality
 status_bar.poor_quality_warning.text=Most connections are being routed via PowerFolder servers
 
+status.download=Down\: {0} KB/s
+status.upload=Up\: {0} KB/s
+
 synchronization.notice.title=Activated transfer mode {0}
 synchronization.warning.automatic_deletions_notice=This mode will also synchronize file deletions\!
 
