Up/Download active and complete stats, refs #1661

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1192,7 +1192,11 @@ status_bar.poor_quality_warning.title=Poor connection quality
 status_bar.poor_quality_warning.text=Most connections are being routed via PowerFolder servers
 
 status.download=Down\: {0} KB/s
+status.active_download_count=Active\: {0}
+status.completed_download_count=Completed\: {0}
 status.upload=Up\: {0} KB/s
+status.active_upload_count=Active\: {0}
+status.completed_upload_count=Completed\: {0}
 
 synchronization.notice.title=Activated transfer mode {0}
 synchronization.warning.automatic_deletions_notice=This mode will also synchronize file deletions\!
